# BinanceTradePro

./: .env.example  README.md  app.py  config.json  config.py  data_cache.db  models.py  production.env  pyproject.toml  replit.md  requirements.txt  trading-bot-nginx.conf  trading-bot.service
analysis/: ml_predictor.py  technical_indicators.py
api/: binance_client.py  proxy_client.py  websocket_handler.py
attached_assets/: Pasted-Prompt-for-Developing-an-Advanced-Binance-Spot-Trading-Bot-on-Replit-I-want-to-create-a-highly-adva-1752258322468_1752258322469.txt
backtesting/: backtest_engine.py
instance/: trading_bot.db
routes/: api_routes.py  dashboard.py  live_trading.py
static/css/: custom.css
static/js/: charts.js  dashboard.js
templates/: advanced_features.html  backtesting.html  base.html  dashboard.html  live_trading.html  portfolio.html  settings.html
trading/: advanced_strategy.py  live_trader.py  paper_trader.py  strategy.py
utils/: data_cache.py  demo_data.py  logger.py
