[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "ccxt>=4.2.0",
    "cryptography>=41.0.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-cors>=4.0.0",
    "flask-migrate>=4.0.0",
    "flask-socketio>=5.3.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "joblib>=1.5.1",
    "matplotlib>=3.8.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=5.17.0",
    "psycopg2-binary>=2.9.10",
    "python-binance>=1.0.29",
    "python-dotenv>=1.1.1",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.11.0",
    "sqlalchemy>=2.0.41",
    "ta>=0.11.0",
    "tensorflow>=2.15.0",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
]
